--- a/odoo-custom-addons/kin_sales/views/sale_view.xml
+++ b/odoo-custom-addons/kin_sales/views/sale_view.xml
@@ -85,7 +85,7 @@
             <field name="model">account.move</field>
              <field name="inherit_id" ref="account.view_move_form" />
             <field name="arch" type="xml">
-                <group id="other_tab_group">
+                <group id="other_tab_group" position="inside">
                     <group string="Sales Info." id="sale_info" >
                         <field name="sale_order_id" readonly="1" />
                     </group>
