--- a/odoo-custom-addons/fibernet/views/sale_view.xml
+++ b/odoo-custom-addons/fibernet/views/sale_view.xml
@@ -6,10 +6,11 @@
             id="menu_sale_order" parent="account.menu_finance_receivables"
             sequence="0" groups="account.group_account_invoice"/>
 
-
         <record model="ir.ui.menu" id="sale.res_partner_menu">
-		 <field name="groups_id" eval="[(6, 0, [ref('sales_team.group_sale_salesman_all_leads')])]"/>
+		    <field name="groups_id" eval="[(6, 0, [ref('sales_team.group_sale_salesman_all_leads')])]"/>
         </record>
+
+
 
 
 
@@ -200,6 +201,21 @@
             <field name="model" >res.partner</field>
             <field name="inherit_id" ref="base.view_partner_form"/>
             <field name="arch" type="xml">
+                <xpath expr="//sheet" position="before">
+                    <header>
+                         <button name="btn_push_customer_selfcare" type="object"  string="Re-Push Selfcare Customer"   groups="fibernet.group_push_selfcare_customer" />
+                    </header>
+                 </xpath>
+                <field name="parent_id" position="attributes" >
+                    <attribute name="invisible" >True</attribute>
+                </field>
+                <field name="type" position="attributes" >
+                    <attribute name="invisible" >True</attribute>
+                </field>
+                <field name="type" position="before" >
+                        <field name="firstname"  attrs="{'invisible': [('company_type', '!=', 'person')], 'required': [('company_type', '=', 'person')]  }"  />
+                        <field name="lastname" attrs="{'invisible': [('company_type', '!=', 'person')], 'required': [('company_type', '==', 'person')] }"    />
+                  </field>
                 <xpath expr="//page[@name='sales_purchases']//field[@name='user_id']"  position="attributes" >
                     <attribute name="groups" >fibernet.group_show_sales_person</attribute>
                 </xpath>
@@ -235,12 +251,13 @@
 
                 <field name="vat" position="after" >
                     <field name="estate_id" options="{'no_open': True, 'no_create': True}" />
-                    <field name="city_cust"   />
-                    <field name="state_ng"   />
+                    <field name="city_cust" required="1"  />
+                    <field name="state_ng" required="1"   />
                     <field name="gender"   />
                     <field name="dob" />
                     <field name="product_id"  options="{'no_open': True, 'no_create': True}"   />
-                    <field name="company_id" readonly="1" />
+                    <field name="amount" readonly="1" />
+                    <field name="company_id" readonly="1" invisible="1" />
                     <field name="ref" string="Client ID" />
                     <field name="location_id"  options="{'no_open': True, 'no_create': True}"  />
                     <field name="base_station_id" domain="[('location_id','=',location_id)]" options="{'no_open': True, 'no_create': True}"  />
@@ -266,6 +283,8 @@
                     <field name="last_logoff"  />
                     <field name="expiration_date"  />
                     <field name="status"  />
+                    <field name="selfcare_push" readonly="1"   />
+                    <field name="selfcare_response" readonly="1"   />
                 </field>
             </field>
          </record>
@@ -331,6 +350,21 @@
                     </button>
                  </div>
 
+                  <button name="preview_sale_order" position="attributes" >
+                      <attribute name="invisible" >True</attribute>
+                  </button>
+
+                 <field name="validity_date" position="attributes" >
+                      <attribute name="invisible" >1</attribute>
+                 </field>
+
+                <field name="payment_term_id" position="attributes" >
+                    <attribute name="invisible" >1</attribute>
+                </field>
+
+                  <page  name="other_information" position="attributes" >
+                    <attribute name="invisible" >1</attribute>
+                </page>
 
 
                  <button name="action_cancel" position="before" >
@@ -390,7 +424,28 @@
             </field>
         </record>
 
+        <record id="sale_order_template_view_form" model="ir.ui.view">
+        <field name="name">sale.order.template.form</field>
+        <field name="model">sale.order.template</field>
+        <field name="type">form</field>
+        <field name="inherit_id" ref="sale_management.sale_order_template_view_form" />
+            <field name="arch" type="xml">
+                <page  name="optional_products" position="attributes">
+                    <attribute name="invisible" >1</attribute>
+                </page>
+            </field>
+        </record>
 
+        <record id="sale_order_form_quote" model="ir.ui.view">
+        <field name="name">sale.order.form.payment</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale_management.sale_order_form_quote" />
+            <field name="arch" type="xml">
+                <page  name="optional_products" position="attributes">
+                    <attribute name="invisible" >1</attribute>
+                </page>
+            </field>
+        </record>
 
 
         <!-- Account payment  -->
