--- a/odoo-custom-addons/kin_stock/views/stock_view.xml
+++ b/odoo-custom-addons/kin_stock/views/stock_view.xml
@@ -53,6 +53,16 @@
                     </button>
                  </div>
 
+                 <field name="partner_id" position="attributes" >
+                    <attribute name="widget">False</attribute>
+                    <attribute name="options">{'no_create': True, 'no_open': True}</attribute>
+                </field>
+
+                <field name="picking_type_id" position="attributes" >
+                    <attribute name="options">{'no_create': True, 'no_open': True}</attribute>
+                </field>
+
+
                 <xpath expr="//form" position="attributes" >
                     <attribute name="duplicate">0</attribute>
                 </xpath>
@@ -76,6 +86,31 @@
                 </field>
                 <field name="location_dest_id" position="attributes">
                     <attribute name="groups" >kin_stock.group_show_destination_location</attribute>
+                </field>
+
+                 <xpath expr="//field[@name='move_ids_without_package']/form/group/field[@name='product_id']" position="attributes" >
+                     <attribute name="options">{'no_create': True, 'no_open': True}</attribute>
+                </xpath>
+
+                <xpath expr="//field[@name='move_ids_without_package']/tree/field[@name='product_id']" position="attributes" >
+                     <attribute name="options">{'no_create': True, 'no_open': True}</attribute>
+                </xpath>
+
+
+            </field>
+        </record>
+
+        <record id="view_stock_move_line_detailed_operation_tree_extend" model="ir.ui.view">
+            <field name="name">stock.move.line.operations.tree.extend</field>
+            <field name="model">stock.move.line</field>
+            <field name="priority">1000</field>
+            <field name="inherit_id" ref="stock.view_stock_move_line_detailed_operation_tree" />
+            <field name="arch" type="xml">
+                <field name="lot_id"  position="attributes" >
+                     <attribute name="options" >{'no_open':True,'no_create':True}</attribute>
+                </field>
+                <field name="product_id" position="attributes" >
+                    <attribute name="options" >{'no_open':True,'no_create':True}</attribute>
                 </field>
             </field>
         </record>
