--- a/odoo-custom-addons/fibernet/views/sale_view.xml
+++ b/odoo-custom-addons/fibernet/views/sale_view.xml
@@ -358,6 +358,10 @@
                       <attribute name="invisible" >1</attribute>
                  </field>
 
+                <field name="date_order" position="attributes" >
+                      <attribute name="nolabel" >0</attribute>
+                 </field>
+
                 <field name="payment_term_id" position="attributes" >
                     <attribute name="invisible" >1</attribute>
                 </field>
