--- a/odoo-custom-addons/fibernet/views/sale_view.xml
+++ b/odoo-custom-addons/fibernet/views/sale_view.xml
@@ -431,8 +431,42 @@
                         <field name="amount_balance" readonly="1" />
                  </field>
 
+                 <xpath expr="//form//field[@name='company_id']"  position="after">
+                    <field name="is_dedicated" invisible="1" />
+                </xpath>
+                <xpath expr="//tree/field[@name='company_id']"  position="after">
+                    <field name="is_dedicated" invisible="1" />
+                </xpath>
+                <xpath expr="//kanban/field[@name='company_id']"  position="after">
+                    <field name="is_dedicated" invisible="1" />
+                </xpath>
+
+                <xpath expr="//form//field[@name='tax_id']"  position="attributes">
+                     <attribute name="attrs" >{'invisible': [('is_dedicated', '=', False)]}</attribute>
+                </xpath>
+                 <xpath expr="//tree/field[@name='tax_id']"  position="attributes">
+                     <attribute name="attrs" >{'invisible': [('is_dedicated', '=', False)]}</attribute>
+                </xpath>
+                <xpath expr="//kanban/field[@name='tax_id']"  position="attributes">
+                     <attribute name="attrs" >{'invisible': [('is_dedicated', '=', False)]}</attribute>
+                </xpath>
+
+                <field name="sale_order_template_id"  position="attributes" >
+                    <attribute name="required" >True</attribute>
+                </field>
+
             </field>
         </record>
+
+<!--        <record id="sale_order_form_quote" model="ir.ui.view">-->
+<!--        <field name="name">sale.order.form.payment</field>-->
+<!--        <field name="model">sale.order</field>-->
+<!--        <field name="inherit_id" ref="sale_management.sale_order_form_quote"/>-->
+<!--        <field name="arch" type="xml">-->
+<!--            -->
+<!--            -->
+<!--        </field>-->
+<!--        </record>-->
 
         <record id="sale_order_template_view_form" model="ir.ui.view">
         <field name="name">sale.order.template.form</field>
@@ -565,6 +599,20 @@
 
          <menuitem id="menu_partner_form_custom_fibernet" parent="sale.sale_order_menu" action="res_partner_action_customer_fibernet" groups="sales_team.group_sale_salesman"  sequence="4"/>
 
+<record id="sale_order_template_view_form" model="ir.ui.view">
+        <field name="name">sale.order.template.form</field>
+        <field name="model">sale.order.template</field>
+        <field name="type">form</field>
+        <field name="inherit_id" ref="sale_management.sale_order_template_view_form" />
+        <field name="arch" type="xml">
+             <field name="company_id" position="after">
+                    <field name="is_dedicated" />
+            </field>
+            <xpath expr="//tree/field[@name='product_uom_qty']"  position="after">
+                    <field name="amount" required="1" />
+            </xpath>
+        </field>
+</record>
 
 
 
