--- a/odoo-custom-addons/kin_loading/wizard/loading_programme_disapproval_reason.xml
+++ b/odoo-custom-addons/kin_loading/wizard/loading_programme_disapproval_reason.xml
@@ -2,73 +2,9 @@
 <odoo>
     <data>
 
-        <!-- Operations Manager Disapproval -->
-        <record id="view_operation_manager_disapproval_reason" model="ir.ui.view">
-            <field name="name">Operation Manager Disapproval Reason</field>
-            <field name="model">loading.programme.disapproval.wizard</field>
-            <field name="arch" type="xml">
-                <form string="Disapproval Reason">
-                     <p>You are disapprove the Loading Programm. Please enter the Reason for the Disapproval </p>
-                    <group>
-                        <label for="msg" string="Reason"  />
-                        <field nolabel="1" name="msg"/>
-                    </group>
-                    <footer>
-                        <button name="action_om_disapprove" string="Operations Manager Disapprove" type="object" class="oe_highlight"/>
-                        or
-                        <button string="Cancel" class="oe_link" special="cancel"/>
-                    </footer>
-                </form>
-            </field>
-        </record>
-
-        <record id="action_operation_manager_disapproval_reason" model="ir.actions.act_window">
-            <field name="name">Operation Manager Disapproval Reason</field>
-            <field name="type">ir.actions.act_window</field>
-            <field name="res_model">loading.programme.disapproval.wizard</field>
-
-            <field name="view_mode">form</field>
-            <field name="view_id" ref="view_operation_manager_disapproval_reason" />
-            <field name="target">new</field>
-            <!--<field name="groups_id" eval="[(4,ref('base.group_sale_salesman'))]"/>-->
-        </record>
 
 
-
-        <!-- DPR Disapproval -->
-        <record id="view_dpr_officer_disapproval_reason" model="ir.ui.view">
-            <field name="name">DPR Officer Disapproval Reason</field>
-            <field name="model">loading.programme.disapproval.wizard</field>
-            <field name="arch" type="xml">
-                <form string="Disapproval Reason">
-                     <p>You are disapprove the Loading Programme. Please enter the Reason for the Disapproval </p>
-                    <group>
-                        <label for="msg" string="Reason"  />
-                        <field nolabel="1" name="msg"/>
-                    </group>
-                    <footer>
-                        <button name="action_dpr_disapprove" string="DPR Disapprove" type="object" class="oe_highlight"/>
-                        or
-                        <button string="Cancel" class="oe_link" special="cancel"/>
-                    </footer>
-                </form>
-            </field>
-        </record>
-
-        <record id="action_dpr_officer_disapproval_reason" model="ir.actions.act_window">
-            <field name="name">DPR Disapproval Reason</field>
-            <field name="type">ir.actions.act_window</field>
-            <field name="res_model">loading.programme.disapproval.wizard</field>
-
-            <field name="view_mode">form</field>
-            <field name="view_id" ref="view_dpr_officer_disapproval_reason" />
-            <field name="target">new</field>
-            <!--<field name="groups_id" eval="[(4,ref('base.group_sale_salesman'))]"/>-->
-        </record>
-
-
-        <!-- Depot Manager Disapproval -->
-        <record id="view_depot_manager_disapproval_reason" model="ir.ui.view">
+        <record id="view_disapproval_reason" model="ir.ui.view">
             <field name="name">Depot Manager Disapproval Reason</field>
             <field name="model">loading.programme.disapproval.wizard</field>
             <field name="arch" type="xml">
@@ -79,7 +15,7 @@
                         <field nolabel="1" name="msg"/>
                     </group>
                     <footer>
-                        <button name="action_dm_disapprove" string="Depot Manager Disapprove" type="object" class="oe_highlight"/>
+                        <button name="action_disapprove" string="Disapprove" type="object" class="oe_highlight"/>
                         or
                         <button string="Cancel" class="oe_link" special="cancel"/>
                     </footer>
@@ -87,13 +23,12 @@
             </field>
         </record>
 
-        <record id="action_depot_manager_disapproval_reason" model="ir.actions.act_window">
-            <field name="name">Depot Manager Disapproval Reason</field>
+        <record id="action_disapproval_reason" model="ir.actions.act_window">
+            <field name="name">Disapproval Reason</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">loading.programme.disapproval.wizard</field>
-
             <field name="view_mode">form</field>
-            <field name="view_id" ref="view_depot_manager_disapproval_reason" />
+            <field name="view_id" ref="view_disapproval_reason" />
             <field name="target">new</field>
             <!--<field name="groups_id" eval="[(4,ref('base.group_sale_salesman'))]"/>-->
         </record>
